Fixed pictures not showing

--- a/styles/styles.css
+++ b/styles/styles.css
@@ -26,7 +26,7 @@ table {
 /* body and page container */
 body {
    background: green;
-   background: url("images/staricon.jpg");
+   background: url("htpps://SchismOnlineProject.github.io/images/staricon.jpg");
    font-family: 'Chakra Petch', sans-serif;
 }
 .container {
